@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20140110] [svn: r543]
+Changelog for sg3_utils-1.38 [20140115] [svn: r543]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - fix --data=- problem with large buffers
     - new --data=@FN to read hex data from file FN
@@ -14,6 +14,8 @@ Changelog for sg3_utils-1.38 [20140110] [svn: r543]
     - fix overflow in encode_whitespaces
   - sg_vpd: add LU_CONG to standard inquiry response output
     - decode Third Party Copy (tpc) page
+  - sg_readcap: for --16 show physical block size if
+    different from logical block size
   - sg_xcopy: environment variables: XCOPY_TO_SRC and
     XCOPY_TO_DST indicate where xcopy command is sent
     - change default to send xcopy to dst (was src)
